DevOps/12-ingress-configmaps-secrets/manifests/07-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - secure.shop.local
      secretName: shop-tls          # a Secret of type kubernetes.io/tls
  rules:
    - host: secure.shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend-svc, port: { number: 80 } }
